<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/schedule_toolbar_holder"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/moButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorWhite"
        android:text="@string/mo"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tuButton"
        app:layout_constraintTop_toBottomOf="@+id/schedule_toolbar_holder" />

    <Button
        android:id="@+id/tuButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorWhite"
        android:text="@string/tu"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/moButton"
        app:layout_constraintRight_toLeftOf="@+id/weButton"
        app:layout_constraintTop_toBottomOf="@+id/schedule_toolbar_holder" />

    <Button
        android:id="@+id/weButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorWhite"
        android:text="@string/we"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/tuButton"
        app:layout_constraintRight_toLeftOf="@+id/thButton"
        app:layout_constraintTop_toBottomOf="@+id/schedule_toolbar_holder" />

    <Button
        android:id="@+id/thButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorWhite"
        android:text="@string/th"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/weButton"
        app:layout_constraintRight_toLeftOf="@+id/frButton"
        app:layout_constraintTop_toBottomOf="@+id/schedule_toolbar_holder" />

    <Button
        android:id="@+id/frButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorWhite"
        android:text="@string/fr"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/thButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedule_toolbar_holder" />

    <ListView
        android:id="@+id/listview_schedule"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weButton"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>